# IT4062_The-price-is-right-Game

./: .gitignore  README.md  docker-compose.yml
client/: .qmake.stash  CMakeCache.txt  CMakeLists.txt  HayChonGiaDungClient  Makefile  client  client.pro  cmake_install.cmake  moc_predefs.h  qml.rcc
client/HayChonGiaDungClient_autogen/: deps  mocs_compilation.cpp
client/HayChonGiaDungClient_autogen/K6S233IZAZ/: moc_BackEnd.cpp.d
client/headers/: BackEnd.h  Utils.h
client/qml/: EditProfilePage.qml  HomeGuest.qml  HomeUser.qml  KickConfirmPopup.qml  LoginPage.qml  MatchSummaryPage.qml  RankingPage.qml  RegisterPage.qml  Room3.qml  RoomV1.qml  Round1Room.qml  Round2Room.qml  Round3Room.qml  SignInPage.qml  SystemNoticePopup.qml  ViewerRound1Room.qml  ViewerRound2Room.qml  ViewerRound3Room.qml  WaitingRoom.qml  main.qml
client/resources/: qml.qrc
client/src/: BackEnd.cpp  Utils.c  main.cpp  networkmanager.cpp  networkmanager.h
database/: DATABASE_SETUP.md  init.sql  seed_data.sql  update_product_images.sql
server/: .gitignore  Dockerfile  Makefile  config.ini
server/include/: database.h  server.h
server/src/: database.c  main.c  server.c
